스타일적용

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" />
     <title>irena</title>
 </head>
 <body>
-    <div class="container"></div>
-    <div class=""card-address"></div></div>
+    <div class="container">
+    <div class=""card-address">
     <div>NAMECARD.KAKAO/com</div>
         <div>THE BONBON</div>
         </div>
@@ -37,8 +38,11 @@
         <div>안녕하세요 irena입니다.</div>
         <div> 학생입니당</div>
 </div>
-</div class="tags">
+<div class="tags">
  <div>#공대생</div>
+ <div>#공대생</div>
+ </div>
+ </div>
 <script
  src="https://kit.fontawesome.com/48f1518008.js"
  crossorigin="anonymous"
