--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="name">irena</div>
             <div class="job">이화여자대학교</div>
         </div>
+    <video autoplay muted loop src=assets/background.mp4 ></video>
     <div class="introduction-container">
         <div class="profile-container">
             <div class="profile-img-container">
